code review and ts cli
